--- a/main.html
+++ b/main.html
@@ -229,7 +229,7 @@
       <h3>Developer & Community</h3>
       <div class="btn-grid">
         <button class="btn" onclick="window.open('https://github.com/Thomas-shelby001')">GitHub</button>
-        <button class="btn" onclick="window.open('https://wa.me/254116266407')">WhatsApp</button>
+        <button class="btn" onclick="window.open('https://whatsapp.com/channel/0029VbAuEfj29754YgFtRf33')">WhatsApp </button>
       </div>
     </div>
 
