--- a/main.html
+++ b/main.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=0.8, user-scalable=no" />
-  <title>𝙋𝙀𝘼𝙆𝙔 𝘽𝙇𝙄𝙉𝘿𝙀𝙍 𝙈𝘿 𝙋𝙊𝙍𝙏𝘼𝙇</title>
+  <title>𝙋𝙀𝘼𝙆𝙔 𝘽𝙇𝙄𝙉𝘿𝙀𝙍 𝙈𝘿 </title>
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&family=Poppins:wght@400;500;600&display=swap" rel="stylesheet">
   <script src="https://kit.fontawesome.com/a2e0da6e4c.js" crossorigin="anonymous"></script>
   <style>
